--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                             <img src="https://cryp2hon.github.io/juristv7/img/services_image1.svg" alt="" class="services_card-image">
                             <div class="services_card-text">
                                 <p class="services_card-descr">Расчет сроков проведения камеральных и выездных налоговых проверок</p>
-                                <a href="" class="head-btn services_card-link">оставить заявку</a>
+                                <a class="head-btn services_card-link">оставить заявку</a>
                             </div>
                         </div>
                     </div>
@@ -586,7 +586,7 @@
                             <img src="https://cryp2hon.github.io/juristv7/img/services_image2.svg" alt="" class="services_card-image">
                             <div class="services_card-text">
                                 <p class="services_card-descr">Анализ риска включения в выездную налоговую проверку</p>
-                                <a href="" class="head-btn services_card-link">оставить заявку</a>
+                                <a class="head-btn services_card-link">оставить заявку</a>
                             </div>
                         </div>
                     </div>
@@ -597,7 +597,7 @@
                             <img src="https://cryp2hon.github.io/juristv7/img/services_image3.svg" alt="" class="services_card-image">
                             <div class="services_card-text">
                                 <p class="services_card-descr">Подготовка ответа на требование налоговой инспекции</p>
-                                <a href="" class="head-btn services_card-link">оставить заявку</a>
+                                <a class="head-btn services_card-link">оставить заявку</a>
                             </div>
                         </div>
                     </div>
@@ -606,7 +606,7 @@
                             <img src="https://cryp2hon.github.io/juristv7/img/services_image4.svg" alt="" class="services_card-image">
                             <div class="services_card-text">
                                 <p class="services_card-descr">Список основных вопросов налоговой инспекции и ответов на них</p>
-                                <a href="" class="head-btn services_card-link">оставить заявку</a>
+                                <a  class="head-btn services_card-link">оставить заявку</a>
                             </div>
                         </div>
                     </div>
@@ -615,7 +615,7 @@
                             <img src="https://cryp2hon.github.io/juristv7/img/services_image5.svg" alt="" class="services_card-image">
                             <div class="services_card-text">
                                 <p class="services_card-descr">Должная осмотрительность при выборе контрагента</p>
-                                <a href="" class="head-btn services_card-link">оставить заявку</a>
+                                <a class="head-btn services_card-link">оставить заявку</a>
                             </div>
                         </div>
                     </div>
@@ -635,7 +635,7 @@
                             <img src="https://cryp2hon.github.io/juristv7/img/services_image7.svg" alt="" class="services_card-image">
                             <div class="services_card-text">
                                 <p class="services_card-descr">Расчет сроков принудительного взыскания налоговой задолженности</p>
-                                <a href="" class="head-btn services_card-link">оставить заявку</a>
+                                <a class="head-btn services_card-link">оставить заявку</a>
                             </div>
                         </div>
                     </div>
@@ -644,7 +644,7 @@
                             <img src="https://cryp2hon.github.io/juristv7/img/services_image8.svg" alt="" class="services_card-image">
                             <div class="services_card-text">
                                 <p class="services_card-descr">Экспресс-анализ компании на наличие налоговых рисков</p>
-                                <a href="" class="head-btn services_card-link">оставить заявку</a>
+                                <a class="head-btn services_card-link">оставить заявку</a>
                             </div>
                         </div>
                     </div>
